erDiagram
    Rol {
        int id PK
        varchar codigo UK
        varchar nombre
        text descripcion
        bool activo
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    Usuario {
        int id PK
        varchar username UK
        varchar password
        varchar first_name
        varchar last_name
        varchar email
        varchar cedula UK
        varchar telefono
        text direccion
        int rol_id FK
        bool activo
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    Categoria {
        int id PK
        varchar nombre UK
        text descripcion
        bool activa
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    NombreProducto {
        int id PK
        varchar nombre UK
        text descripcion
        int categoria_id FK
        varchar unidad_medida
        bool activo
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    Producto {
        int id PK
        varchar codigo UK
        int nombre_producto_id FK
        text descripcion
        int categoria_id FK
        decimal precio_venta
        decimal precio_compra
        decimal costo_promedio
        decimal porcentaje_ganancia
        bool actualizar_precio_automatico
        int stock_actual
        int stock_minimo
        int unidades_por_paquete
        date fecha_expiracion
        varchar unidad_medida
        bool activo
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    Proveedor {
        int id PK
        varchar nombre
        varchar ruc
        varchar contacto
        varchar telefono
        varchar email
        text direccion
        bool activo
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    EntradaCompra {
        int id PK
        varchar numero_factura
        int proveedor_id FK
        date fecha_compra
        decimal total
        text observaciones
        int usuario_registro_id FK
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    DetalleEntradaCompra {
        int id PK
        int entrada_compra_id FK
        int producto_id FK
        int cantidad
        decimal precio_unitario
        decimal subtotal
        date fecha_vencimiento
    }
    AjusteInventario {
        int id PK
        int producto_id FK
        varchar tipo_ajuste
        varchar motivo
        int cantidad_anterior
        int cantidad_nueva
        int diferencia
        text observaciones
        int usuario_registro_id FK
        datetime fecha_ajuste
        datetime fecha_creacion
    }
    Cliente {
        int id PK
        varchar nombre
        varchar cedula
        varchar telefono
        varchar email
        text direccion
        varchar tipo_cliente
        bool activo
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    Factura {
        int id PK
        varchar numero_factura UK
        int cliente_id FK
        varchar cliente_nombre
        int vendedor_id FK
        datetime fecha_venta
        decimal subtotal
        decimal descuento
        decimal total
        varchar estado
        text observaciones
        datetime fecha_creacion
        datetime fecha_actualizacion
    }
    DetalleFactura {
        int id PK
        int factura_id FK
        int producto_id FK
        int cantidad
        decimal precio_unitario
        decimal subtotal
    }
    ProductosRecomendados {
        int id PK
        int producto_base_id FK
        int producto_recomendado_id FK
        varchar tipo_recomendacion
        decimal score
        json contexto
        int usuario_id FK
        bool mostrado
        bool aceptado
        datetime fecha_recomendacion
        datetime fecha_creacion
    }
    Rol ||--o{ Usuario : tiene
    Usuario ||--o{ Factura : vende
    Usuario ||--o{ EntradaCompra : registra
    Usuario ||--o{ AjusteInventario : registra
    Usuario ||--o{ ProductosRecomendados : recibe
    Categoria ||--o{ NombreProducto : agrupa
    Categoria ||--o{ Producto : agrupa
    NombreProducto ||--o{ Producto : instancia
    Proveedor ||--o{ EntradaCompra : provee
    EntradaCompra ||--o{ DetalleEntradaCompra : contiene
    Producto ||--o{ DetalleEntradaCompra : detalle
    Producto ||--o{ AjusteInventario : ajuste
    Cliente ||--o{ Factura : compra
    Usuario ||--o{ Factura : vendedor
    Factura ||--o{ DetalleFactura : contiene
    Producto ||--o{ DetalleFactura : linea
    Producto ||--o{ ProductosRecomendados : producto_base
    Producto ||--o{ ProductosRecomendados : producto_recomendado
